--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,8 +1,33 @@
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+html {
+    font-size: 62.5%;
 }
+
+body {
+    margin: 0;
+    font-family: 'Press Start 2P', sans-serif;
+    color: #616161;
+    background-color: #ffffff;
+    opacity: 1;
+    background-image:  radial-gradient(#4DD0E1 1.35px, transparent 1.35px), radial-gradient(#4DD0E1 1.35px, #ffffff 1.35px);
+    background-size: 54px 54px;
+    background-position: 0 0,27px 27px;
+}
+
+p {
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
+h1, h2 {
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
+button {
+    background: none;
+    border: none;
+    padding: 0;
+}
+
